add plotting functions for scans and chromatograms
