# openapi-server/src/api.go
@@ -22,6 +22,7 @@ type DefaultApiRouter interface {
 	Get3dMap(http.ResponseWriter, *http.Request)
 	GetChromatogramData(http.ResponseWriter, *http.Request)
 	GetChromatogramHeader(http.ResponseWriter, *http.Request)
+	GetChromatogramImage(http.ResponseWriter, *http.Request)
 	GetChromatograms(http.ResponseWriter, *http.Request)
 	GetFileName(http.ResponseWriter, *http.Request)
 	GetInstrumentAnalyzer(http.ResponseWriter, *http.Request)
@@ -34,6 +35,7 @@ type DefaultApiRouter interface {
 	GetRunData(http.ResponseWriter, *http.Request)
 	GetSampleData(http.ResponseWriter, *http.Request)
 	GetScanHeader(http.ResponseWriter, *http.Request)
+	GetScanImage(http.ResponseWriter, *http.Request)
 	GetScanPeaks(http.ResponseWriter, *http.Request)
 	GetScansData(http.ResponseWriter, *http.Request)
 	GetSoftware(http.ResponseWriter, *http.Request)
@@ -49,6 +51,7 @@ type DefaultApiServicer interface {
 	Get3dMap(context.Context, string, int64, float64, float64, float64) (ImplResponse, error)
 	GetChromatogramData(context.Context, string, int64) (ImplResponse, error)
 	GetChromatogramHeader(context.Context, string, int64) (ImplResponse, error)
+	GetChromatogramImage(context.Context, int64, string) (ImplResponse, error)
 	GetChromatograms(context.Context, string, int64, int64, bool) (ImplResponse, error)
 	GetFileName(context.Context, string) (ImplResponse, error)
 	GetInstrumentAnalyzer(context.Context, string) (ImplResponse, error)
@@ -61,6 +64,7 @@ type DefaultApiServicer interface {
 	GetRunData(context.Context, string) (ImplResponse, error)
 	GetSampleData(context.Context, string) (ImplResponse, error)
 	GetScanHeader(context.Context, string, int64) (ImplResponse, error)
+	GetScanImage(context.Context, int64, string) (ImplResponse, error)
 	GetScanPeaks(context.Context, string, int64) (ImplResponse, error)
 	GetScansData(context.Context, string, bool, int64, int64) (ImplResponse, error)
 	GetSoftware(context.Context, string) (ImplResponse, error)
